rsworkspace/crates/trogon-eventsourcing/tests/ui/fail/missing_when.stderr
error[E0599]: no method named `then` found for struct `TestCase<TestCommand, Given<TestEvent>>` in the current scope
  --> tests/ui/fail/missing_when.rs:11:10
   |
 9 |       TestCase::new(decider::<TestCommand>())
   |       ---------------------------------------
   |       |
   |  _____method `then` is available on `TestCase<TestCommand>`
   | |
10 | |         .given([])
11 | |         .then(expect_error(TestDecisionError::AlreadyRegistered));
   | |_________-^^^^
   |
help: there is a method `when` with a similar name
   |
11 -         .then(expect_error(TestDecisionError::AlreadyRegistered));
11 +         .when(expect_error(TestDecisionError::AlreadyRegistered));
   |
